--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["utils", "add-day", "day01", "day02", "day03"]
+members = ["utils", "add-day", "day01", "day02", "day03", "day04"]
 resolver = "2"
